@@ -65,12 +65,15 @@ public class StudentServiceA implements StudentService{
 
     @Override
     public List<Student> getStudentsByName(String lastName) {
-        return students.values().stream().filter(s -> s.getLastName().equals(lastName)).toList();
+        return students.values().stream()
+                .filter(s -> s.getLastName().equals(lastName))
+                .toList();
     }
 
+    @Override
     public List<Student> searchStudent(String name) {
         return students.values().stream()
                 .filter(s -> s.getLastName().startsWith(name) || s.getFirstName().startsWith(name))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
